--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kurdlingo-app</title>
+    <title>KurdLingo - Learn Kurdish with AI</title>
+    <meta name="description" content="Master the Kurdish language with KurdLingo. Interactive lessons, AI roleplay, and gamified learning to help you speak confidently." />
   </head>
   <body>
     <div id="root"></div>
